--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,6 +4,7 @@ main {
   place-items: center;
   padding: var(--padding) calc(var(--padding) * 2);
   height: 100vh;
+  width: 100vw;
 }
 
 article {
@@ -12,7 +13,7 @@ article {
   background-color: var(--color-grey-800);
   padding: var(--article-padding);
   text-align: center;
-  max-width: 48rem;
+  /* max-width: 48rem; */
   margin-inline: auto;
   display: flex;
   flex-direction: column;
@@ -77,6 +78,7 @@ article {
     font-weight: var(--fw-600);
     flex-shrink: 0;
     transition: all 200ms linear;
+    text-wrap: nowrap;
 
     &:is(:hover, :focus-visible) {
         background-color: var(--color-green);
