--- a/src/css/main.css
+++ b/src/css/main.css
@@ -78,7 +78,8 @@ article {
     font-weight: var(--fw-600);
     flex-shrink: 0;
     transition: all 200ms linear;
-    text-wrap: nowrap;
+    /* text-wrap: nowrap; */
+    white-space: nowrap;
 
     &:is(:hover, :focus-visible) {
         background-color: var(--color-green);
